--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
     "start": "npx webpack"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^7.25.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2",
     "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
+    "typescript": "^4.6.3",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "prettier": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
