--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "scripts": {
-    "start": "npx webpack"
+    "build": "npx webpack",
+    "watch": "npx webpack --watch",
+    "start": "npx webpack && webpack-dev-server --mode development --open",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^12.1.4",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
@@ -12,6 +17,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "@webpack-cli/serve": "^1.6.1",
     "eslint": "^7.25.0",
     "eslint-plugin-prettier": "3.3.1",
     "jest": "^27.5.1",
@@ -19,10 +25,11 @@
     "ts-loader": "^8.0.4",
     "typescript": "^4.6.3",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
     "prettier": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
